--- a/style.css
+++ b/style.css
@@ -1,3 +1,27 @@
 body {
+    font-size: 35px;
     background-color: #006ca9;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 20px;
+}
+
+p {
+    font-size: 20px;
+    line-height:30px;
+  text-align: center;
+  vertical-align: right;
+  width: 800px;
+  margin:auto;
+  padding: 15px;
+}
+
+p1 {
+    font-size: 20px;
+    line-height:30px;
+  text-align: center;
+  vertical-align: right;
+  width: 800px;
+  margin:auto;
+  padding: 15px;
 }
